// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outputs should properly generate aggregate classes for model with lowercase name: AggregateExample 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { ExampleAvgAggregate } from \\"../outputs/ExampleAvgAggregate\\";
import { ExampleCountAggregate } from \\"../outputs/ExampleCountAggregate\\";
import { ExampleMaxAggregate } from \\"../outputs/ExampleMaxAggregate\\";
import { ExampleMinAggregate } from \\"../outputs/ExampleMinAggregate\\";
import { ExampleSumAggregate } from \\"../outputs/ExampleSumAggregate\\";

@ObjectType(\\"AggregateExample\\", {
  isAbstract: true
})
export class AggregateExample {
  @Field(_type => ExampleCountAggregate, {
    nullable: true
  })
  _count!: ExampleCountAggregate | null;

  @Field(_type => ExampleAvgAggregate, {
    nullable: true
  })
  _avg!: ExampleAvgAggregate | null;

  @Field(_type => ExampleSumAggregate, {
    nullable: true
  })
  _sum!: ExampleSumAggregate | null;

  @Field(_type => ExampleMinAggregate, {
    nullable: true
  })
  _min!: ExampleMinAggregate | null;

  @Field(_type => ExampleMaxAggregate, {
    nullable: true
  })
  _max!: ExampleMaxAggregate | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for model with lowercase name: ExampleAvgAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleAvgAggregate\\", {
  isAbstract: true
})
export class ExampleAvgAggregate {
  @Field(_type => Float, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(_type => Float, {
    nullable: true
  })
  floatField!: number | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for model with lowercase name: ExampleCountAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleCountAggregate\\", {
  isAbstract: true
})
export class ExampleCountAggregate {
  @Field(_type => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  stringField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  floatField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  booleanField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  dateField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  _all!: number;
}
"
`;

exports[`outputs should properly generate aggregate classes for model with lowercase name: ExampleMaxAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleMaxAggregate\\", {
  isAbstract: true
})
export class ExampleMaxAggregate {
  @Field(_type => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(_type => String, {
    nullable: true
  })
  stringField!: string | null;

  @Field(_type => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(_type => Boolean, {
    nullable: true
  })
  booleanField!: boolean | null;

  @Field(_type => Date, {
    nullable: true
  })
  dateField!: Date | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for model with lowercase name: ExampleMinAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleMinAggregate\\", {
  isAbstract: true
})
export class ExampleMinAggregate {
  @Field(_type => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(_type => String, {
    nullable: true
  })
  stringField!: string | null;

  @Field(_type => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(_type => Boolean, {
    nullable: true
  })
  booleanField!: boolean | null;

  @Field(_type => Date, {
    nullable: true
  })
  dateField!: Date | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for model with lowercase name: ExampleSumAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleSumAggregate\\", {
  isAbstract: true
})
export class ExampleSumAggregate {
  @Field(_type => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(_type => Float, {
    nullable: true
  })
  floatField!: number | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for model with lowercase name: outputs index 1`] = `
"export { AffectedRowsOutput } from \\"./AffectedRowsOutput\\";
export { AggregateExample } from \\"./AggregateExample\\";
export { ExampleAvgAggregate } from \\"./ExampleAvgAggregate\\";
export { ExampleCountAggregate } from \\"./ExampleCountAggregate\\";
export { ExampleGroupBy } from \\"./ExampleGroupBy\\";
export { ExampleMaxAggregate } from \\"./ExampleMaxAggregate\\";
export { ExampleMinAggregate } from \\"./ExampleMinAggregate\\";
export { ExampleSumAggregate } from \\"./ExampleSumAggregate\\";
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: AggregateExample 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { ExampleAvgAggregate } from \\"../outputs/ExampleAvgAggregate\\";
import { ExampleCountAggregate } from \\"../outputs/ExampleCountAggregate\\";
import { ExampleMaxAggregate } from \\"../outputs/ExampleMaxAggregate\\";
import { ExampleMinAggregate } from \\"../outputs/ExampleMinAggregate\\";
import { ExampleSumAggregate } from \\"../outputs/ExampleSumAggregate\\";

@ObjectType(\\"AggregateExample\\", {
  isAbstract: true
})
export class AggregateExample {
  @Field(_type => ExampleCountAggregate, {
    nullable: true
  })
  _count!: ExampleCountAggregate | null;

  @Field(_type => ExampleAvgAggregate, {
    nullable: true
  })
  _avg!: ExampleAvgAggregate | null;

  @Field(_type => ExampleSumAggregate, {
    nullable: true
  })
  _sum!: ExampleSumAggregate | null;

  @Field(_type => ExampleMinAggregate, {
    nullable: true
  })
  _min!: ExampleMinAggregate | null;

  @Field(_type => ExampleMaxAggregate, {
    nullable: true
  })
  _max!: ExampleMaxAggregate | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: ExampleAvgAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleAvgAggregate\\", {
  isAbstract: true
})
export class ExampleAvgAggregate {
  @Field(_type => Float, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(_type => Float, {
    nullable: true
  })
  floatField!: number | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: ExampleCountAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleCountAggregate\\", {
  isAbstract: true
})
export class ExampleCountAggregate {
  @Field(_type => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  stringField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  floatField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  booleanField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  dateField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  _all!: number;
}
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: ExampleMaxAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleMaxAggregate\\", {
  isAbstract: true
})
export class ExampleMaxAggregate {
  @Field(_type => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(_type => String, {
    nullable: true
  })
  stringField!: string | null;

  @Field(_type => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(_type => Boolean, {
    nullable: true
  })
  booleanField!: boolean | null;

  @Field(_type => Date, {
    nullable: true
  })
  dateField!: Date | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: ExampleMinAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleMinAggregate\\", {
  isAbstract: true
})
export class ExampleMinAggregate {
  @Field(_type => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(_type => String, {
    nullable: true
  })
  stringField!: string | null;

  @Field(_type => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(_type => Boolean, {
    nullable: true
  })
  booleanField!: boolean | null;

  @Field(_type => Date, {
    nullable: true
  })
  dateField!: Date | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: ExampleSumAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"ExampleSumAggregate\\", {
  isAbstract: true
})
export class ExampleSumAggregate {
  @Field(_type => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(_type => Float, {
    nullable: true
  })
  floatField!: number | null;
}
"
`;

exports[`outputs should properly generate aggregate classes for renamed model: outputs index 1`] = `
"export { AffectedRowsOutput } from \\"./AffectedRowsOutput\\";
export { AggregateExample } from \\"./AggregateExample\\";
export { ExampleAvgAggregate } from \\"./ExampleAvgAggregate\\";
export { ExampleCountAggregate } from \\"./ExampleCountAggregate\\";
export { ExampleGroupBy } from \\"./ExampleGroupBy\\";
export { ExampleMaxAggregate } from \\"./ExampleMaxAggregate\\";
export { ExampleMinAggregate } from \\"./ExampleMinAggregate\\";
export { ExampleSumAggregate } from \\"./ExampleSumAggregate\\";
"
`;

exports[`outputs should properly generate count classes for relation fields: FirstModelCount 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"FirstModelCount\\", {
  isAbstract: true
})
export class FirstModelCount {
  @Field(_type => Int, {
    nullable: false
  })
  secondModelsField!: number;
}
"
`;

exports[`outputs should properly generate count classes for relation fields: outputs index 1`] = `
"export { AffectedRowsOutput } from \\"./AffectedRowsOutput\\";
export { AggregateFirstModel } from \\"./AggregateFirstModel\\";
export { AggregateSecondModel } from \\"./AggregateSecondModel\\";
export { FirstModelAvgAggregate } from \\"./FirstModelAvgAggregate\\";
export { FirstModelCount } from \\"./FirstModelCount\\";
export { FirstModelCountAggregate } from \\"./FirstModelCountAggregate\\";
export { FirstModelGroupBy } from \\"./FirstModelGroupBy\\";
export { FirstModelMaxAggregate } from \\"./FirstModelMaxAggregate\\";
export { FirstModelMinAggregate } from \\"./FirstModelMinAggregate\\";
export { FirstModelSumAggregate } from \\"./FirstModelSumAggregate\\";
export { SecondModelAvgAggregate } from \\"./SecondModelAvgAggregate\\";
export { SecondModelCountAggregate } from \\"./SecondModelCountAggregate\\";
export { SecondModelGroupBy } from \\"./SecondModelGroupBy\\";
export { SecondModelMaxAggregate } from \\"./SecondModelMaxAggregate\\";
export { SecondModelMinAggregate } from \\"./SecondModelMinAggregate\\";
export { SecondModelSumAggregate } from \\"./SecondModelSumAggregate\\";
"
`;

exports[`outputs should properly generate output type classes: AffectedRowsOutput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"AffectedRowsOutput\\", {
  isAbstract: true
})
export class AffectedRowsOutput {
  @Field(_type => Int, {
    nullable: false
  })
  count!: number;
}
"
`;

exports[`outputs should properly generate output type classes: AggregateSample 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SampleAvgAggregate } from \\"../outputs/SampleAvgAggregate\\";
import { SampleCountAggregate } from \\"../outputs/SampleCountAggregate\\";
import { SampleMaxAggregate } from \\"../outputs/SampleMaxAggregate\\";
import { SampleMinAggregate } from \\"../outputs/SampleMinAggregate\\";
import { SampleSumAggregate } from \\"../outputs/SampleSumAggregate\\";

@ObjectType(\\"AggregateSample\\", {
  isAbstract: true
})
export class AggregateSample {
  @Field(_type => SampleCountAggregate, {
    nullable: true
  })
  _count!: SampleCountAggregate | null;

  @Field(_type => SampleAvgAggregate, {
    nullable: true
  })
  _avg!: SampleAvgAggregate | null;

  @Field(_type => SampleSumAggregate, {
    nullable: true
  })
  _sum!: SampleSumAggregate | null;

  @Field(_type => SampleMinAggregate, {
    nullable: true
  })
  _min!: SampleMinAggregate | null;

  @Field(_type => SampleMaxAggregate, {
    nullable: true
  })
  _max!: SampleMaxAggregate | null;
}
"
`;

exports[`outputs should properly generate output type classes: SampleAvgAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"SampleAvgAggregate\\", {
  isAbstract: true
})
export class SampleAvgAggregate {
  @Field(_type => Float, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(_type => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(_type => Float, {
    nullable: true
  })
  intArrayField!: number | null;
}
"
`;

exports[`outputs should properly generate output type classes: SampleCountAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"SampleCountAggregate\\", {
  isAbstract: true
})
export class SampleCountAggregate {
  @Field(_type => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  stringField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  floatField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  booleanField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  dateField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  intArrayField!: number;

  @Field(_type => Int, {
    nullable: false
  })
  _all!: number;
}
"
`;

exports[`outputs should properly generate output type classes: SampleGroupBy 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SampleAvgAggregate } from \\"../outputs/SampleAvgAggregate\\";
import { SampleCountAggregate } from \\"../outputs/SampleCountAggregate\\";
import { SampleMaxAggregate } from \\"../outputs/SampleMaxAggregate\\";
import { SampleMinAggregate } from \\"../outputs/SampleMinAggregate\\";
import { SampleSumAggregate } from \\"../outputs/SampleSumAggregate\\";

@ObjectType(\\"SampleGroupBy\\", {
  isAbstract: true
})
export class SampleGroupBy {
  @Field(_type => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(_type => String, {
    nullable: false
  })
  stringField!: string;

  @Field(_type => Float, {
    nullable: false
  })
  floatField!: number;

  @Field(_type => Boolean, {
    nullable: false
  })
  booleanField!: boolean;

  @Field(_type => Date, {
    nullable: false
  })
  dateField!: Date;

  @Field(_type => [Int], {
    nullable: true
  })
  intArrayField!: number[] | null;

  @Field(_type => SampleCountAggregate, {
    nullable: true
  })
  _count!: SampleCountAggregate | null;

  @Field(_type => SampleAvgAggregate, {
    nullable: true
  })
  _avg!: SampleAvgAggregate | null;

  @Field(_type => SampleSumAggregate, {
    nullable: true
  })
  _sum!: SampleSumAggregate | null;

  @Field(_type => SampleMinAggregate, {
    nullable: true
  })
  _min!: SampleMinAggregate | null;

  @Field(_type => SampleMaxAggregate, {
    nullable: true
  })
  _max!: SampleMaxAggregate | null;
}
"
`;

exports[`outputs should properly generate output type classes: SampleMaxAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"SampleMaxAggregate\\", {
  isAbstract: true
})
export class SampleMaxAggregate {
  @Field(_type => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(_type => String, {
    nullable: true
  })
  stringField!: string | null;

  @Field(_type => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(_type => Boolean, {
    nullable: true
  })
  booleanField!: boolean | null;

  @Field(_type => Date, {
    nullable: true
  })
  dateField!: Date | null;
}
"
`;

exports[`outputs should properly generate output type classes: SampleMinAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"SampleMinAggregate\\", {
  isAbstract: true
})
export class SampleMinAggregate {
  @Field(_type => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(_type => String, {
    nullable: true
  })
  stringField!: string | null;

  @Field(_type => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(_type => Boolean, {
    nullable: true
  })
  booleanField!: boolean | null;

  @Field(_type => Date, {
    nullable: true
  })
  dateField!: Date | null;
}
"
`;

exports[`outputs should properly generate output type classes: SampleSumAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"SampleSumAggregate\\", {
  isAbstract: true
})
export class SampleSumAggregate {
  @Field(_type => Int, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(_type => Float, {
    nullable: true
  })
  floatField!: number | null;

  @Field(_type => [Int], {
    nullable: true
  })
  intArrayField!: number[] | null;
}
"
`;

exports[`outputs should properly generate output type classes: outputs index 1`] = `
"export { AffectedRowsOutput } from \\"./AffectedRowsOutput\\";
export { AggregateSample } from \\"./AggregateSample\\";
export { SampleAvgAggregate } from \\"./SampleAvgAggregate\\";
export { SampleCountAggregate } from \\"./SampleCountAggregate\\";
export { SampleGroupBy } from \\"./SampleGroupBy\\";
export { SampleMaxAggregate } from \\"./SampleMaxAggregate\\";
export { SampleMinAggregate } from \\"./SampleMinAggregate\\";
export { SampleSumAggregate } from \\"./SampleSumAggregate\\";
"
`;

exports[`outputs when simpleResolvers option is enabled should properly generate output type classes: AffectedRowsOutput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"AffectedRowsOutput\\", {
  isAbstract: true,
  simpleResolvers: true
})
export class AffectedRowsOutput {
  @Field(_type => Int, {
    nullable: false
  })
  count!: number;
}
"
`;

exports[`outputs when simpleResolvers option is enabled should properly generate output type classes: AggregateSample 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SampleAvgAggregate } from \\"../outputs/SampleAvgAggregate\\";
import { SampleCountAggregate } from \\"../outputs/SampleCountAggregate\\";
import { SampleMaxAggregate } from \\"../outputs/SampleMaxAggregate\\";
import { SampleMinAggregate } from \\"../outputs/SampleMinAggregate\\";
import { SampleSumAggregate } from \\"../outputs/SampleSumAggregate\\";

@ObjectType(\\"AggregateSample\\", {
  isAbstract: true,
  simpleResolvers: true
})
export class AggregateSample {
  @Field(_type => SampleCountAggregate, {
    nullable: true
  })
  _count!: SampleCountAggregate | null;

  @Field(_type => SampleAvgAggregate, {
    nullable: true
  })
  _avg!: SampleAvgAggregate | null;

  @Field(_type => SampleSumAggregate, {
    nullable: true
  })
  _sum!: SampleSumAggregate | null;

  @Field(_type => SampleMinAggregate, {
    nullable: true
  })
  _min!: SampleMinAggregate | null;

  @Field(_type => SampleMaxAggregate, {
    nullable: true
  })
  _max!: SampleMaxAggregate | null;
}
"
`;

exports[`outputs when simpleResolvers option is enabled should properly generate output type classes: AggregateSample 2`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../test/import\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SampleAvgAggregate } from \\"../outputs/SampleAvgAggregate\\";
import { SampleCountAggregate } from \\"../outputs/SampleCountAggregate\\";
import { SampleMaxAggregate } from \\"../outputs/SampleMaxAggregate\\";
import { SampleMinAggregate } from \\"../outputs/SampleMinAggregate\\";
import { SampleSumAggregate } from \\"../outputs/SampleSumAggregate\\";

@ObjectType(\\"AggregateSample\\", {
  isAbstract: true
})
export class AggregateSample {
  @Field(_type => SampleCountAggregate, {
    nullable: true
  })
  _count!: SampleCountAggregate | null;

  @Field(_type => SampleAvgAggregate, {
    nullable: true
  })
  _avg!: SampleAvgAggregate | null;

  @Field(_type => SampleSumAggregate, {
    nullable: true
  })
  _sum!: SampleSumAggregate | null;

  @Field(_type => SampleMinAggregate, {
    nullable: true
  })
  _min!: SampleMinAggregate | null;

  @Field(_type => SampleMaxAggregate, {
    nullable: true
  })
  _max!: SampleMaxAggregate | null;
}
"
`;

exports[`outputs when simpleResolvers option is enabled should properly generate output type classes: SampleAvgAggregate 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Query, ResolveField, Resolver, Root, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@ObjectType(\\"SampleAvgAggregate\\", {
  isAbstract: true,
  simpleResolvers: true
})
export class SampleAvgAggregate {
  @Field(_type => Float, {
    nullable: true
  })
  intIdField!: number | null;

  @Field(_type => Float, {
    nullable: true
  })
  floatField!: number | null;
}
"
`;
